--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ langchainhub = "^0.1.21"
 langgraph = "^0.2.72"
 sh = "^2.2.1"
 argparse = "^1.4.0"
+gitingest = "^0.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
