--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ langgraph = "^0.2.72"
 sh = "^2.2.1"
 argparse = "^1.4.0"
 gitingest = "^0.1.3"
+gitpython = "^3.1.44"
 
 
 [tool.poetry.group.dev.dependencies]
