--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,12 @@ python = ">=3.12,<3.13"
 langchain = {extras = ["openai"], version = "^0.3.18"}
 langchain-community = "^0.3.17"
 langchainhub = "^0.1.21"
-langgraph = "^0.2.72"
+langgraph = {extras = ["sqlite"], version = "^0.2.73"}
 sh = "^2.2.1"
 argparse = "^1.4.0"
 gitingest = "^0.1.3"
 gitpython = "^3.1.44"
+langgraph-checkpoint-sqlite = "^2.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
