--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ gitingest = "^0.1.3"
 gitpython = "^3.1.44"
 langgraph-checkpoint-sqlite = "^2.0.5"
 kubernetes = "^32.0.1"
+ruff = "^0.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
