--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # We have a dedicated environment for PyPI
+    environment: pypi
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
