--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Required to fetch all history and tags for versioning
       
       - name: Set up Python
         uses: actions/setup-python@v4
