--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ flake8 = "^7.0.0"
 black = "^24.3.0"
 isort = "^5.13.2"
 mypy = "^1.9.0"
+bandit = "^1.7.8"
 poetry-dynamic-versioning = "^1.2.0"
 
 [build-system]
@@ -57,6 +58,11 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+
+[tool.bandit]
+exclude_dirs = ["tests"]
+skips = ["B101"]  # Skip assert statements in tests
+targets = ["src"]
 
 [tool.poetry-dynamic-versioning]
 enable = true
